--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -25,5 +25,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:singleLine="false"
+        android:inputType="textPersonName"
+        tools:ignore="LabelFor" />
 </RelativeLayout>
