--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="43dp"
+        android:layout_marginBottom="27dp"
         android:text="@string/save"
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="222dp" />
@@ -21,11 +21,10 @@
     <EditText
         android:id="@+id/edt_input"
         android:layout_width="match_parent"
-        android:layout_height="371dp"
+        android:layout_height="421dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:ems="10"
-        android:singleLine="false"
-        android:inputType="textPersonName"
+        android:inputType="textMultiLine"
         tools:ignore="LabelFor" />
 </RelativeLayout>
