--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,9 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/item_add"
-        android:icon="@drawable/ic_action_add"
-        android:title="@string/add_note"
-        app:showAsAction="always" />
+    android:id="@+id/item_add"
+    android:icon="@drawable/ic_action_add"
+    android:title="@string/add_note"
+    app:showAsAction="always" />
+
+    <item
+        android:id="@+id/item_save"
+        android:icon="@drawable/ic_action_save"
+        android:title="@string/save_to_text"
+        app:showAsAction="ifRoom" />
 
 </menu>
