--- a/app/src/main/res/layout/single_line_lv.xml
+++ b/app/src/main/res/layout/single_line_lv.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:singleLine="true"
+    android:background="@drawable/selected_lv"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:gravity="center_vertical"
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
