--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -18,5 +18,10 @@
         android:icon="@drawable/ic_action_settings"
         android:title="@string/settings"
         app:showAsAction="collapseActionView" />
+    <item
+        android:id="@+id/item_delete"
+        android:icon="@drawable/ic_action_delete"
+        android:title="@string/delete"
+        app:showAsAction="collapseActionView" />
 
 </menu>
