--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -7,24 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".NoteActivity">
 
-    <Button
-        android:id="@+id/btn_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="27dp"
-        android:text="@string/save"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="222dp" />
-
     <EditText
         android:id="@+id/edt_input"
         android:layout_width="match_parent"
-        android:layout_height="421dp"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:ems="10"
+        android:gravity="top"
         android:inputType="textMultiLine"
         tools:ignore="LabelFor" />
 </RelativeLayout>
