--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bcg"
     tools:context=".SettingsActivity">
 
     <Button
@@ -13,7 +14,9 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="120dp"
+        android:background="@android:color/black"
         android:text="@string/save"
+        android:textColor="@android:color/background_light"
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="437dp" />
 
