--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -24,8 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/checkBox"
-        android:layout_marginTop="177dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="179dp"
         tools:layout_editor_absoluteX="138dp"
         tools:layout_editor_absoluteY="203dp">
 
@@ -46,7 +46,7 @@
     </RadioGroup>
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/add_date_cb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
