--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,22 +6,22 @@
         android:id="@+id/item_add"
         android:icon="@drawable/ic_action_add"
         android:title="@string/add_note"
-         app:showAsAction="ifRoom" />
+         app:showAsAction="always" />
 
     <item
         android:id="@+id/item_save"
         android:icon="@drawable/ic_action_save"
         android:title="@string/save_to_text"
-        app:showAsAction="collapseActionView" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/item_settings"
         android:icon="@drawable/ic_action_settings"
         android:title="@string/settings"
-        app:showAsAction="collapseActionView" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/item_delete"
         android:icon="@drawable/ic_action_delete"
         android:title="@string/delete"
-        app:showAsAction="collapseActionView" />
+        app:showAsAction="ifRoom" />
 
 </menu>
