--- a/app/src/main/res/menu/settings_menu.xml
+++ b/app/src/main/res/menu/settings_menu.xml
@@ -11,5 +11,5 @@
     <item
         android:id="@+id/item_save_to_file"
         android:title="@string/save_to_text"
-        app:showAsAction="collapseActionView" />
+        app:showAsAction="ifRoom" />
 </menu>
