--- a/app/src/main/res/menu/settings_menu.xml
+++ b/app/src/main/res/menu/settings_menu.xml
@@ -6,7 +6,7 @@
         android:id="@+id/item_save"
         android:icon="@drawable/ic_action_save"
         android:title="@string/save"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/item_save_to_file"
